[gd_scene load_steps=7 format=3 uid="uid://bu6lvy7t435f0"]

[ext_resource type="Script" path="res://src/Scripts/extra/tripwire.gd" id="1_yxk6w"]
[ext_resource type="Script" path="res://src/Scenes/tripwire_noise_visualization.gd" id="2_s1f2l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nq5po"]
radius = 5.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4claq"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_86yp6"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_caew1"]
radius = 5.0

[node name="tripwire" type="Node2D"]
script = ExtResource("1_yxk6w")

[node name="Hitbox" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_nq5po")
script = ExtResource("1_yxk6w")

[node name="SoundCollision" type="Area2D" parent="."]
show_behind_parent = true
z_index = 10
material = SubResource("CanvasItemMaterial_4claq")
use_parent_material = true
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundCollision"]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_86yp6")
shape = SubResource("CircleShape2D_caew1")

[node name="NoiseVisualization" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_s1f2l")

[connection signal="area_entered" from="Hitbox" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_area_exited"]
